--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,10 @@
       <artifactId>maven-artifact</artifactId>
       <version>2.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>qdox</groupId>
+      <artifactId>qdox</artifactId>
+      <version>1.5</version>
+    </dependency>
   </dependencies>
 </project>
