--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.jvnet.hudson.tools</groupId>
@@ -11,7 +11,7 @@
   <packaging>maven-plugin</packaging>
   
   <name>Maven Hudson Plugin</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <dependencies>
     <dependency>
@@ -40,4 +40,8 @@
       <version>1.6.1</version>
     </dependency>
   </dependencies>
+
+  <scm>
+    <tag>maven-hpi-plugin-1_0</tag>
+  </scm>
 </project>
