--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <packaging>maven-plugin</packaging>
   
   <name>Maven Hudson Plugin</name>
-  <version>1.0</version>
+  <version>1.1-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
@@ -40,8 +40,4 @@
       <version>1.6.1</version>
     </dependency>
   </dependencies>
-
-  <scm>
-    <tag>maven-hpi-plugin-1_0</tag>
-  </scm>
 </project>
