--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,11 @@
       <artifactId>qdox</artifactId>
       <version>1.6.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.mortbay.jetty</groupId>
+      <artifactId>maven-jetty-plugin</artifactId>
+      <type>maven-plugin</type>
+      <version>6.0.1</version>
+    </dependency>
   </dependencies>
 </project>
