--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <packaging>maven-plugin</packaging>
   
   <name>Maven Hudson Plugin</name>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
@@ -46,8 +46,4 @@
       <version>6.0.1</version>
     </dependency>
   </dependencies>
-
-  <scm>
-    <tag>maven-hpi-plugin-1_1</tag>
-  </scm>
 </project>
