--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -36,7 +36,7 @@
       <plugin>
         <groupId>org.jvnet.hudson.tools</groupId>
         <artifactId>maven-hpi-plugin</artifactId>
-        <version>1.1</version>
+        <version>@PLUGIN_VERSION@</version>
         <extensions>true</extensions>
       </plugin>
     </plugins>
