--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <packaging>maven-plugin</packaging>
   
   <name>Maven Hudson Plugin</name>
-  <version>1.2</version>
+  <version>1.3-SNAPSHOT</version>
 
   <build>
     <resources>
@@ -102,8 +102,4 @@
       <version>1.0-alpha-4</version>
     </dependency>
   </dependencies>
-
-  <scm>
-    <tag>maven-hpi-plugin-1_2</tag>
-  </scm>
 </project>
