--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,21 @@
     <version>1.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-	  
+  
   <artifactId>maven-hpi-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   
   <name>Maven Hudson Plugin</name>
   <version>1.3-SNAPSHOT</version>
+  <description>Maven2 plugin for developing Hudson plugins</description>
+  
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
 
   <build>
     <resources>
