--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <packaging>maven-plugin</packaging>
   
   <name>Maven Hudson Plugin</name>
-  <version>1.6</version>
+  <version>1.7-SNAPSHOT</version>
   <description>Maven2 plugin for developing Hudson plugins</description>
   
   <licenses>
@@ -117,8 +117,4 @@
       <version>1.0-alpha-4</version>
     </dependency>
   </dependencies>
-
-  <scm>
-    <tag>maven-hpi-plugin-1_6</tag>
-  </scm>
 </project>
