--- a/pom.xml
+++ b/pom.xml
@@ -116,5 +116,36 @@
       <artifactId>plexus-interactivity-api</artifactId>
       <version>1.0-alpha-4</version>
     </dependency>
+    <!-- for the upload goal -->
+    <dependency>
+      <groupId>javanettasks</groupId>
+      <artifactId>javanettasks</artifactId>
+      <version>1.0.12</version>
+    </dependency>
+    <dependency>
+      <groupId>httpunit</groupId>
+      <artifactId>httpunit</artifactId>
+      <version>1.5.4</version>
+    </dependency>
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xerces</artifactId>
+      <version>2.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>jtidy</groupId>
+      <artifactId>jtidy</artifactId>
+      <version>4aug2000r7-dev</version>
+    </dependency>
+    <dependency>
+      <groupId>dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <version>1.4</version>
+    </dependency>
+    <dependency>
+      <groupId>nekohtml</groupId>
+      <artifactId>nekohtml</artifactId>
+      <version>0.9.5</version>
+    </dependency>
   </dependencies>
 </project>
