applied a patch: http://www.nabble.com/-PATCH--pom-tweaking-%28was-Re%3A-Building-from-source-takes-ages%29-tf4154136.html

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,21 @@
     </license>
   </licenses>
 
+  <repositories>
+    <repository>
+      <id>java.net</id>
+      <url>http://download.java.net/maven/1/</url>
+      <layout>legacy</layout>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>never</updatePolicy>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <build>
     <resources>
       <resource>
