generate docs for plugin goals.

--- a/pom.xml
+++ b/pom.xml
@@ -163,4 +163,12 @@
       <version>0.9.5</version>
     </dependency>
   </dependencies>
+
+  <reporting>
+    <plugins>
+      <plugin>
+        <artifactId>maven-plugin-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
