added setting for pushing docs to java.net site.

--- a/pom.xml
+++ b/pom.xml
@@ -171,4 +171,10 @@
       </plugin>
     </plugins>
   </reporting>
+  
+  <distributionManagement>
+    <site>
+      <url>file:../../../www/maven-hpi-plugin/</url>
+    </site>
+  </distributionManagement>
 </project>
