--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <packaging>maven-plugin</packaging>
   
   <name>Maven Hudson Plugin</name>
-  <version>1.11-SNAPSHOT</version>
+  <version>1.11</version>
   <description>Maven2 plugin for developing Hudson plugins</description>
   
   <licenses>
@@ -179,4 +179,8 @@
     </site>
   </distributionManagement>
 
+
+  <scm>
+    <tag>maven-hpi-plugin-1_11</tag>
+  </scm>
 </project>
