--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
   
   <pluginRepositories>
     <pluginRepository>
-      <id>java.net</id>
+      <id>java.net2</id>
       <url>http://download.java.net/maven/2/</url>
       <releases>
         <enabled>true</enabled>
