--- a/pom.xml
+++ b/pom.xml
@@ -186,7 +186,14 @@
     <dependency>
       <groupId>org.kohsuke.stapler</groupId>
       <artifactId>maven-stapler-plugin</artifactId>
-      <version>1.3</version>
+      <version>1.6</version>
+      <!-- make sure to exclude servlet so that the one in Jetty (which has different groupId) will win -->
+      <exclusions>
+        <exclusion>
+          <groupId>javax.servlet</groupId>
+          <artifactId>servlet-api</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
